# Remote-Shared-Controller

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  install_linux.sh
completion/: rsc_completion.bash  rsccli_completion.bash
install/: CMakeLists.txt
resource/: icon.rc  res.qrc
src/: CMakeLists.txt  config.hpp  icon.rc
src/common/: CMakeLists.txt  combo.cpp  combo.hpp  config.hpp  controller_op.cpp  controller_op.hpp  pc.cpp  pc.hpp  pc_list.cpp  pc_list.hpp  ptr.hpp  rscui.hpp  util.cpp  util.hpp
src/controller/: CMakeLists.txt  controller.h  cursor.h  cursor_linux.c  input-event-codes.h  translate.c
src/controller/linux/: controller_linux.c  cursor_linux.c  translate.c
src/controller/windows/: controller_win.cpp  cursor_win.cpp
src/core/: combo.cpp  combo.hpp  convkey.hpp  main.cpp  pc.hpp  pc_list.cpp  pc_list.hpp  rsc.cpp  rsc.hpp  rsc_shortcut.cpp  rscp.cpp  rscp.hpp
src/event_interface/: event_interface.h  event_interface_linux.c
src/network/: CMakeLists.txt  crypto.c  crypto.h  interface.c  interface.h  network.c  network.h  queue.c  queue.h  scnp.c  scnp.h  scnp_socket.h
src/network/linux/: scnp_socket.c
src/network/windows/: scnp_socket.c
src/rsccli/: command-cli.cpp  command-cli.hpp  config-cli.hpp  main-cli.cpp  parser-cli.cpp  parser-cli.hpp  rsccli.cpp  rsccli.hpp
src/rscgui/: button_switch.cpp  button_switch.hpp  config-gui.hpp  lobby.cpp  lobby.hpp  main-gui.cpp  menu_bar.cpp  menu_bar.hpp  pc_panel.cpp  pc_panel.hpp  power_panel.cpp  power_panel.hpp  rscgui.cpp  rscgui.hpp  shortcut_window.cpp  shortcut_window.hpp
src/rsclocal_com/: CMakeLists.txt  message.cpp  message.hpp  rsclocal_com.hpp
src/rsclocal_com/linux/: fifo.cpp  fifo.hpp
src/rsclocal_com/windows/: fifo.cpp  fifo.hpp
src/tests/: CMakeLists.txt  common_test.cpp  event_test.cpp  localcom_test.cpp  network_test.cpp  rsccli_test.cpp
